--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1212,3 +1212,51 @@ html {
 footer .row div:last-of-type ul li {
     margin-left: 2.7px;
 }
+
+.lastProjects .card .col-md-12 {
+    position: relative;
+}
+
+.lastProjects .card .col-md-12 div.overlay {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
+    background: var(--transparent-section);
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column wrap;
+}
+
+.lastProjects .card .col-md-12 div.overlay .progress {
+    z-index: 11;
+    display: block;
+    position: absolute;
+    content: "";
+    width: 75%;
+    margin: auto auto;
+    height: 10px;
+    border-radius: 9px;
+    box-shadow: .1px .1px 10px var(--light-grey);
+    background: var(--white);
+}
+
+.lastProjects .card .col-md-12 div.overlay .progress span {
+    z-index: 11;
+    display: block;
+    content: "";
+    width: 75%;
+    margin-left: -10px;
+    height: 100%;
+    border-radius: 9px;
+    background: var(--red);
+}
+
+.lastProjects .card .col-md-12 div.overlay h5 {
+    color: var(--red);
+    text-shadow: 2px 2px 10px var(--light-grey);
+    font-size: 30px;
+    margin-bottom: 18%;
+}
