--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1191,7 +1191,7 @@ section.Board .row:first-of-type {
 
  ::-webkit-scrollbar-thumb {
     background: linear-gradient(180deg, var(--red), var(--dark-red));
-    background: linear-gradient(180deg, var(--bit-darkgrey), var(--bit-darkergrey));
+    /*  background: linear-gradient(180deg, var(--bit-darkgrey), var(--bit-darkergrey));*/
     border-radius: 1px;
 }
 
@@ -1259,4 +1259,13 @@ footer .row div:last-of-type ul li {
     text-shadow: 2px 2px 10px var(--light-grey);
     font-size: 30px;
     margin-bottom: 18%;
+}
+
+.btn {
+    text-transform: capitalize;
+}
+
+.btn-check:focus+.btn,
+.btn:focus {
+    box-shadow: .4px .4px 5px var(--transparent-red);
 }
