--- a/CSS/media.css
+++ b/CSS/media.css
@@ -359,6 +359,9 @@
     footer .row div:nth-of-type(3) ul li {
         margin-left: 3.4px;
     }
+    .About ul:nth-of-type(2) {
+        order: 3;
+    }
 }
 
 @media (max-width: 576px) {
@@ -1028,5 +1031,8 @@
     }
     section.Board .container {
         max-width: 1100px!important
+    }
+    .technical h2 {
+        margin-bottom: 77px;
     }
 }
