--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1361,7 +1361,8 @@
                                                      left: 0px;
                                                      width: 100%;
                                                      height: 100%;
-                                                     z-index: 9999999;
+                                                     z-index: 999999999;
+                                                   bottom:0px;
                                                  }
                                                  
                                                  .loading {
