--- a/CSS/media.css
+++ b/CSS/media.css
@@ -371,7 +371,7 @@
         width: 190px;
         height: 150px;
         margin: 100px auto 200px;
-        left: 18%;
+        left: 20%;
         top: 100px;
     }
     .loader::before {
@@ -379,6 +379,9 @@
     }
     .loader::after {
         right: -387px;
+    }
+    .card-body {
+        height: 300px;
     }
 }
 
@@ -400,8 +403,11 @@
         width: 220px;
         height: 150px;
         margin: 100px auto 200px;
-        left: 25%;
+        left: 24%;
         top: 100px;
+    }
+    .card-body {
+        height: 340px;
     }
 }
 
@@ -485,6 +491,9 @@
 @media(max-width:400px) {
     .sponsors .row .col-md-10 .carousel {
         margin-right: -10px;
+    }
+    .card-body {
+        height: 390px;
     }
 }
 
@@ -592,6 +601,9 @@
     header.about.aboutus {
         height: 196px;
     }
+    .card-body {
+        height: 430px;
+    }
 }
 
 @media(max-width:290px) {
@@ -643,6 +655,9 @@
     section.Board li {
         max-width: 90px;
         padding: 0px;
+    }
+    .card-body {
+        height: 460px;
     }
 }
 
@@ -884,6 +899,9 @@
         left: 32%;
         top: 100px;
     }
+    .card-body {
+        height: 320px;
+    }
 }
 
 @media(min-width: 993px) and (max-width: 1200px) {
@@ -1030,6 +1048,9 @@
         margin: 100px auto 200px;
         left: 37%;
         top: 100px;
+    }
+    .card-body {
+        height: 320px;
     }
 }
 
